// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FilterContainer /> should render correctly with filterText 1`] = `
<div
  class="filter-container"
>
  <p>
    Фильтрация данных
  </p>
  <form
    id="filter-form"
  >
    <input
      placeholder="Введите данные"
      type="search"
      value="filterText"
    />
    <button
      disabled=""
      type="submit"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-search fa-w-16 fa-1x "
        data-icon="search"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
          fill="currentColor"
        />
      </svg>
    </button>
    <label>
      <input
        name="id"
        type="checkbox"
      />
      Id
    </label>
    <label>
      <input
        name="firstName"
        type="checkbox"
      />
      First Name
    </label>
    <label>
      <input
        name="lastName"
        type="checkbox"
      />
      Last Name
    </label>
    <label>
      <input
        name="email"
        type="checkbox"
      />
      E-Mail
    </label>
    <label>
      <input
        name="phone"
        type="checkbox"
      />
      Phone
    </label>
  </form>
</div>
`;

exports[`<FilterContainer /> should render correctly with filterText and checked filterFields 1`] = `
<div
  class="filter-container"
>
  <p>
    Фильтрация данных
  </p>
  <form
    id="filter-form"
  >
    <input
      placeholder="Введите данные"
      type="search"
      value="filterText"
    />
    <button
      type="submit"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-search fa-w-16 fa-1x "
        data-icon="search"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
          fill="currentColor"
        />
      </svg>
    </button>
    <label>
      <input
        name="id"
        type="checkbox"
      />
      Id
    </label>
    <label>
      <input
        name="firstName"
        type="checkbox"
      />
      First Name
    </label>
    <label>
      <input
        name="lastName"
        type="checkbox"
      />
      Last Name
    </label>
    <label>
      <input
        name="email"
        type="checkbox"
      />
      E-Mail
    </label>
    <label>
      <input
        name="phone"
        type="checkbox"
      />
      Phone
    </label>
  </form>
</div>
`;

exports[`<FilterContainer /> should render correctly without filterText 1`] = `
<div
  class="filter-container"
>
  <p>
    Фильтрация данных
  </p>
  <form
    id="filter-form"
  >
    <input
      placeholder="Введите данные"
      type="search"
      value=""
    />
    <button
      disabled=""
      type="submit"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-search fa-w-16 fa-1x "
        data-icon="search"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
          fill="currentColor"
        />
      </svg>
    </button>
    <label>
      <input
        disabled=""
        name="id"
        type="checkbox"
      />
      Id
    </label>
    <label>
      <input
        disabled=""
        name="firstName"
        type="checkbox"
      />
      First Name
    </label>
    <label>
      <input
        disabled=""
        name="lastName"
        type="checkbox"
      />
      Last Name
    </label>
    <label>
      <input
        disabled=""
        name="email"
        type="checkbox"
      />
      E-Mail
    </label>
    <label>
      <input
        disabled=""
        name="phone"
        type="checkbox"
      />
      Phone
    </label>
  </form>
</div>
`;
